# sdr-j-fm

./: .gitignore  .qmake.stash  AUTHORS  CMakeLists.txt  Makefile  NOTE-SDRPLAY  README  README.md  \  fm-build-script  fmreceiver-1.2_resource.rc  fmreceiver-installer.iss  fmreceiver.desktop  fmreceiver.pro  gui.cpp  gui.h  main.cpp  radio.cpp  radio.h  radio.ui  radio.ui-old  radio.ui-xx  resources.qrc  sdr-j-fmreceiver-099.pro  sdrgui.ui
appimage/: AppRun
devices/: device-exceptions.h  device-handler.cpp  device-handler.h  deviceselect.cpp  deviceselect.h
devices/airspy/: airspy-handler.cpp  airspy-handler.h  airspy-widget.ui
devices/colibri-handler/: LibLoader.cpp  colibri-handler.cpp  colibri-handler.h  colibri-widget.ui
devices/extio-handler/: card-reader.cpp  card-reader.h  common-readers.cpp  common-readers.h  extio-handler.cpp  extio-handler.h  reader.h  virtual-reader.cpp  virtual-reader.h
devices/filereader/: filehulp.cpp  filehulp.h  filereader.cpp  filereader.h
devices/hackrf-handler/: hackrf-handler.cpp  hackrf-handler.h  hackrf-widget.ui
devices/lime-handler/: lime-handler.cpp  lime-handler.h  lime-widget.h
devices/pluto-handler/: fmFilter.h  pluto-handler.cpp  pluto-handler.h  pluto-widget.ui
devices/pmsdr/: pa-reader.cpp  pa-reader.h  pmsdr-comm.cpp  pmsdr-usb.cpp  pmsdr-usb.h  pmsdr.h  pmsdr.pro
devices/rtlsdr-handler/: dabstick-widget.ui  dongleselect.cpp  dongleselect.h  rtlsdr-handler.cpp  rtlsdr-handler.h
devices/sdrplay-handler/: mirsdrapi-rsp.h  sdrplay-handler.cpp  sdrplay-handler.h  sdrplay-widget.ui  sdrplayselect.cpp  sdrplayselect.h
devices/sdrplay-handler-v3/: Rsp-device.cpp  Rsp-device.h  Rsp1A-handler.cpp  Rsp1A-handler.h  RspDuo-handler.cpp  RspDuo-handler.h  RspDx-handler.cpp  RspDx-handler.h  RspI-handler.cpp  RspI-handler.h  RspII-handler.cpp  RspII-handler.h  sdrplay-commands.h  sdrplay-handler-v3.cpp  sdrplay-handler-v3.h  sdrplay-widget-v3.ui
devices/sdrplay-handler-v3-old/include/: sdrplay_api.h
devices/sw-elad-s1/: elad-loader.cpp  elad-loader.h  elad-s1.h  elad_widget.ui
forms/: configwidget.ui  radio.ui  radio.ui-abc  radio.ui-def
includes/: fm-constants.h  gui.h  popup-keypad.h
includes/fm/: fm-demodulator.h  fm-levels.h  fm-processor.h  pilot-recover.h  stereo-separation.h
includes/output/: audiosink.h
includes/rds/: rds-blocksynchronizer.h  rds-decoder-1.h  rds-decoder-2.h  rds-decoder-3.h  rds-decoder.h  rds-group.h  rds-groupdecoder.h
includes/scopes-qwt6/: fft-scope.h  hs-scope.h  iqdisplay.h  ls-scope.h  scope.h  scope.h-thomas  spectrogram-qwt5.h  spectrogramdata.h
includes/sdr/: agc.h  costas.h  shaping_filter.h  time_sync.h
includes/various/: Xtan2.h  agc.h  converter.h  costas.h  devicemanager.h  fft-complex.h  fft-filters.h  fft.h  fir-filters.h  iir-filters.h  keyboardfilter.h  newconverter.h  oscillator.h  pllC.h  program-list.h  resampler.h  ringbuffer.h  shaping_filter.h  sincos.h  squelchClass.h  themechoser.h
input/: virtual-input.cpp  virtual-input.h
input/airspy/: airspy-handler.cpp  airspy-handler.h  airspy-widget.ui
input/airspy-old/: airspy.cpp  airspy.h  airspy_lib.c  airspy_lib.h  iqconverter_float.c  iqconverter_int16.c
input/dabstick/: dabstick-widget.ui  dabstick.cpp  dabstick.h
input/extio-handler/: card-reader.cpp  card-reader.h  common-readers.h  extio-handler.cpp  extio-handler.h  virtual-reader.cpp
input/filereader/: Makefile  filehulp.cpp  filehulp.h  filereader-widget.ui  filereader.cpp  filereader.h  x
input/hackrf-handler/: hackrf-handler.h
input/pmsdr/: pa-reader.cpp  pmsdr-comm.cpp  pmsdr-comm.h  pmsdr-usb.cpp  pmsdr-widget.ui  pmsdr.cpp  pmsdr.h
input/rtlsdr-handler/: dabstick-widget.ui  rtlsdr-handler.h
input/sdrplay/: sdrplay-loader.cpp  sdrplay-loader.h  sdrplay-widget.ui  sdrplay-worker.cpp  sdrplay-worker.h  sdrplay.cpp  sdrplay.h
input/sw-elad-s1/: elad-loader.cpp  elad-s1.cpp  elad-s1.h  elad-worker.cpp  elad-worker.h  elad_widget.ui  widget.ui
large-gui/: CMakeLists.txt  Makefile  gui.cpp  gui.h  log.h  sdr-j-fmreceiver-098.pro  sdr-j-fmreceiver-099.pro  sdrgui.ui  ui_airspy-widget.h  ui_dabstick-widget.h  ui_extio-widget.h  ui_filereader-widget.h  ui_sdrgui.h  ui_sdrplay-widget.h
linux-bin/: fmreceiver-1.2  sdr-j-fm-0.99  sdr-j-fmreceiver-0.99
small-gui/: CMakeLists.txt  Makefile  gui.cpp  gui.h  main.cpp  popup-keypad.cpp  popup-keypad.h  sdr-j-fm-mini.pro  sdrgui.ui
src/: Makefile  gui.cpp  main.cpp  popup-keypad.cpp  sdr-j-fmreceiver-099.pro  sdrgui.ui-orig
src/fm/: fm-demodulator.cpp  fm-levels.cpp  fm-processor.cpp  pilot-recover.cpp  stereo-separation.cpp
src/output/: audiosink.cpp
src/rds/: ebu-codetables.c  rds-blocksynchronizer.cpp  rds-decoder-1.cpp  rds-decoder-2.cpp  rds-decoder-3.cpp  rds-decoder.cpp  rds-group.cpp  rds-groupdecoder.cpp
src/scopes-qwt6/: fft-scope.cpp  hs-scope.cpp  iqdisplay.cpp  ls-scope.cpp  scope.cpp
src/sdr/: shaping_filter.cpp
src/various/: Xtan2.cpp  fft-complex.cpp  fft-filters.cpp  fft.cpp  fir-filters.cpp  iir-filters.cpp  keyboardfilter.cpp  newconverter.cpp  oscillator.cpp  pllC.cpp  program-list.cpp  resampler.cpp  shaping_filter.cpp  sincos.cpp  squelchClass.cpp  themechoser.cpp  themechoser.cpp-thomas
stylesheets/: Adaptic.qss  Chatbee.qss  Combinear.qss  DeepBox.qss  Eclippy.qss  Filmovio.qss  Geoo.qss  Gravira.qss  HackBook.qss  Incrypt.qss  Integrid.qss  Perstfic.qss  Photoxo.qss  VisualScript.qss
